Remove debug messages & use getFirst() instead of get(0)